# dupliners

./: .dockerfile  .justfile  Cargo.toml  README.md
src/: file_duplicates.rs  folder_explorer.rs  main.rs
