[package]
name = "dupliners"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.22", features = ["derive"] }
hex-literal = "0.3.4"
sha2 = "0.10.2"
tempfile = "3.3.0"
typenum = "1.15.0"
